// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> renders an empty dialog 1`] = `
<DocumentFragment>
  <portal-mock>
    <aside
      class="root"
    >
      <form
        class="form"
      >
        <button
          class="mask"
          type="reset"
        />
        <div
          class="dialog"
        >
          <div
            class="header"
          >
            <span
              class="headerText"
            />
            <button
              class="headerButton"
              type="reset"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="body"
          >
            <div
              class="contents"
            />
            <div
              class="buttons"
            >
              <button
                class="root_lowPriority"
                type="reset"
              >
                <span
                  class="content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="confirmButton"
                classes="[object Object]"
                type="submit"
              >
                <span>
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </aside>
  </portal-mock>
</DocumentFragment>
`;

exports[`<Dialog> renders the dialog with disabled buttons 1`] = `
<DocumentFragment>
  <portal-mock>
    <aside
      class="root"
    >
      <form
        class="form"
      >
        <button
          class="mask"
          disabled=""
          type="reset"
        />
        <div
          class="dialog"
        >
          <div
            class="header"
          >
            <span
              class="headerText"
            />
            <button
              class="headerButton"
              disabled=""
              type="reset"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="body"
          >
            <div
              class="contents"
            />
            <div
              class="buttons"
            >
              <button
                class="root_lowPriority"
                disabled=""
                type="reset"
              >
                <span
                  class="content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="confirmButton"
                classes="[object Object]"
                disabled=""
                type="submit"
              >
                <span>
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </aside>
  </portal-mock>
</DocumentFragment>
`;

exports[`<Dialog> renders the dialog with disabled confirm button 1`] = `
<DocumentFragment>
  <portal-mock>
    <aside
      class="root"
    >
      <form
        class="form"
      >
        <button
          class="mask"
          type="reset"
        />
        <div
          class="dialog"
        >
          <div
            class="header"
          >
            <span
              class="headerText"
            />
            <button
              class="headerButton"
              type="reset"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="body"
          >
            <div
              class="contents"
            />
            <div
              class="buttons"
            >
              <button
                class="root_lowPriority"
                type="reset"
              >
                <span
                  class="content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="confirmButton"
                classes="[object Object]"
                disabled=""
                type="submit"
              >
                <span>
                  Confirm
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </aside>
  </portal-mock>
</DocumentFragment>
`;
